<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingBottom="4dp"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/colorWhite"
    tools:context=".view.fragment.modul.InventoryFragment">


    <EditText
        android:id="@+id/etSearchProduct"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:maxLength="20"
        android:background="@color/colorWhite"
        android:hint="@string/cari_barang"
        android:inputType="text"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:drawablePadding="4dp"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintEnd_toStartOf="@+id/view1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorThemeGreyLight"
        app:layout_constraintBottom_toBottomOf="@+id/etSearchProduct"
        app:layout_constraintEnd_toStartOf="@+id/imgBtnFilter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etSearchProduct"
        app:layout_constraintTop_toTopOf="@+id/etSearchProduct" />

    <ImageView
        android:id="@+id/imgBtnFilter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/etSearchProduct"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@+id/etSearchProduct"
        app:srcCompat="@drawable/ic_tune_black_24dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorThemeGreyLight"
        app:layout_constraintBottom_toTopOf="@+id/layoutTabHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearchProduct" />

    <LinearLayout
        android:id="@+id/layoutTabHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/colorThemeGreenDark02"
        android:weightSum="3"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/rcProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintVertical_chainStyle="spread">
        <TextView
            android:id="@+id/labelTabProductName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/nama_barang"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/labelTabProductStock"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/stok"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
        <TextView
            android:id="@+id/labelTabProductStatus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/status_stok"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcProduct"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutTabHeader" />

    <TextView
        android:id="@+id/tv_empty_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rec_radius_5dp_grey"
        android:padding="8dp"
        android:text="@string/data_product_tidak_ditemukan"
        android:textColor="@color/colorThemeGreyDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutTabHeader"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_playlist_add_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>